// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card render card 1`] = `
<li>
  <div
    className="yard-block-card__inner "
  />
</li>
`;

exports[`Card render card with children 1`] = `
<li>
  <div
    className="yard-block-card__inner "
  >
    <p>
      Paragraph
    </p>
  </div>
</li>
`;

exports[`Card render card with props 1`] = `
<li
  className="className"
  style={
    {
      "color": "red",
    }
  }
>
  <div
    className="yard-block-card__inner innerClass"
  />
</li>
`;
